--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,9 @@ jobs:
   tests:
     name: PHP ${{ matrix.php-version }}-${{ matrix.os }}
     env:
-      extensions: curl, mbstring, dom, intl, json, libxml, xml, xmlwriter
+      extensions: curl, mbstring, dom, fileinfo, intl, json, libxml, xml, xmlwriter
       key: cache-v1
+      update: true
 
     runs-on: ${{ matrix.os }}
 
@@ -49,7 +50,6 @@ jobs:
           extensions: ${{ env.extensions }}
           ini-values: date.timezone='UTC'
           coverage: pcov
-          tools: cs2pr, phan
 
       - name: Determine composer cache directory on Linux
         if: matrix.os == 'ubuntu-latest'
@@ -63,15 +63,18 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ${{ env.COMPOSER_CACHE_DIR }}
-          key: php${{ matrix.php-version }}-composer-${{ matrix.dependencies }}-${{ hashFiles('**/composer.json') }}
+          key: php${{ matrix.php-version }}-composer-${{ hashFiles('**/composer.json') }}
           restore-keys: |
-            php${{ matrix.php-version }}-composer-${{ matrix.dependencies }}-
+            php${{ matrix.php-version }}-composer-
+
+      - name: Install composer v. 2.0
+        run: composer self-update --snapshot
 
       - name: Install dependencies with composer php 7.4
         if: matrix.php-version == '7.4'
         run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader
 
-      - name: Install dependencies with composer --ignore-platform-reqs php 8.0
+      - name: Install dependencies with composer php 8.0
         if: matrix.php-version == '8.0'
         run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ignore-platform-reqs
 
@@ -91,11 +94,18 @@ jobs:
           php -S 127.0.0.1:8080 -t public > ./runtime/logs/yii.log 2>&1 &
           vendor/bin/codecept run
 
-      - name: Run tests with codeception without coverage on Windows
-        if: matrix.os == 'windows-latest'
+      - name: Run tests with codeception without coverage on Windows php 7.4
+        if: matrix.os == 'windows-latest' && matrix.php-version == '7.4'
         run: |
           php -S 127.0.0.1:8080 -t public > ./runtime/logs/yii.log 2>&1 &
           vendor/bin/codecept run
+        shell: bash
+
+      - name: Run tests with codeception without coverage on Windows php 8.0
+        if: matrix.os == 'windows-latest' && matrix.php-version == '8.0'
+        run: |
+          php -S 127.0.0.1:8080 -t public > ./runtime/logs/yii.log 2>&1 &
+          vendor/bin/codecept run --skip unit
         shell: bash
 
       - name: Upload coverage to codecov on Linux php 7.4
@@ -107,8 +117,3 @@ jobs:
           flags: unittests
           name: codecov-app
           fail_ci_if_error: true
-
-      - name: Phan static analysis on Linux php 7.4
-        if: matrix.os == 'ubuntu-latest' && matrix.php-version == '7.4'
-        continue-on-error: true
-        run: phan --no-progress-bar --output-mode checkstyle | cs2pr --graceful-warnings --colorize
