--- a/composer.json
+++ b/composer.json
@@ -11,29 +11,32 @@
     "prefer-stable": true,
     "require": {
         "php": ">=7.4",
-        "nyholm/psr7": "@dev",
+        "nyholm/psr7": "^1.0",
         "yii-extension/bulma": "@dev",
-        "yiisoft/aliases": "@dev",
-        "yiisoft/arrays": "@dev",
-        "yiisoft/cache": "@dev",
-        "yiisoft/cache-file": "@dev",
-        "yiisoft/di": "@dev",
-        "yiisoft/event-dispatcher": "@dev",
-        "yiisoft/log": "@dev",
-        "yiisoft/log-target-file": "@dev",
-        "yiisoft/router": "@dev",
-        "yiisoft/router-fastroute": "@dev",
-        "yiisoft/view": "@dev",
-        "yiisoft/yii-debug": "@dev",
-        "yiisoft/yii-web": "@dev"
+        "yiisoft/aliases": "^1.0",
+        "yiisoft/arrays": "^3.0@dev",
+        "yiisoft/cache": "^3.0@dev",
+        "yiisoft/cache-file": "^3.0@dev",
+        "yiisoft/di": "^3.0@dev",
+        "yiisoft/event-dispatcher": "^3.0@dev",
+        "yiisoft/log": "^3.0@dev",
+        "yiisoft/log-target-file": "^3.0@dev",
+        "yiisoft/router": "^3.0@dev",
+        "yiisoft/router-fastroute": "^3.0@dev",
+        "yiisoft/view": "^3.0@dev",
+        "yiisoft/yii-console": "^3.0@dev",
+        "yiisoft/yii-web": "^3.0@dev"
     },
     "require-dev": {
-        "codeception/codeception": "@dev",
-        "codeception/module-asserts": "@dev",
-        "codeception/module-phpbrowser": "@dev",
-        "phpunit/phpunit": "9.1.5",
+        "codeception/codeception": "4.1.x-dev",
+        "codeception/module-asserts": "dev-master",
+        "codeception/module-phpbrowser": "dev-master",
+        "infection/codeception-adapter": "^0.3.3",
+        "infection/infection": "^0.16.3",
+        "phan/phan": "^3.0.2",
+        "phpunit/phpunit": "^9.2",
         "roave/security-advisories": "dev-master",
-        "yiisoft/composer-config-plugin": "@dev"
+        "yiisoft/composer-config-plugin": "^1.0@dev"
     },
     "autoload": {
         "psr-4": {
@@ -50,19 +53,14 @@
             "dev-master": "1.0.x-dev"
         },
         "config-plugin": {
-            "common": "config/common.php",
             "params": [
                 "config/params.php",
                 "?config/params-local.php"
             ],
-            "web": [
-                "$common",
-                "config/web.php"
-            ],
             "console": [
-                "$common",
                 "config/console.php"
             ],
+            "web": "config/web.php",
             "providers": "config/providers.php",
             "providers-web": [
                 "$providers",
