--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,11 @@
         "php": ">=7.4",
         "nyholm/psr7": "^1.0",
         "yii-extension/bulma": "@dev",
+        "yii-extension/yii-event-dispatcher": "@dev",
         "yiisoft/aliases": "^1.0",
         "yiisoft/arrays": "^3.0@dev",
         "yiisoft/cache": "^3.0@dev",
         "yiisoft/cache-file": "^3.0@dev",
-        "yiisoft/di": "^3.0@dev",
-        "yiisoft/event-dispatcher": "^3.0@dev",
         "yiisoft/log": "^3.0@dev",
         "yiisoft/log-target-file": "^3.0@dev",
         "yiisoft/router": "^3.0@dev",
