--- a/.github/workflows/mutation.yml
+++ b/.github/workflows/mutation.yml
@@ -52,6 +52,7 @@ jobs:
       - name: Run test mutation infection with coverage
         run: |
           php -S 127.0.0.1:8080 -t public > ./runtime/logs/yii.log 2>&1 &
-          sudo vendor/bin/infection --no-progress --only-covered
+          sudo mkdir /runtime/infection
+          vendor/bin/infection --no-progress --only-covered
         env:
           STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
